--- a/index.html
+++ b/index.html
@@ -5,27 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PortFolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="images/ptIcon.webp" />
     
 </head>
 <body>
     <header>
-
-        <img src="images/IMG_0766 2.jpeg" alt="images">
-        <h1> Axel Marsacq </h1>
-        <p>Engineering Student with a passion for Computer Science</p>
+        <div style="margin-left: auto; margin-right: auto; display: flex;">
+            <img class="profilPhoto" src="images/profilPhoto.jpeg" alt="images">
+            <div style="margin: auto;">
+                <h1> Axel Marsacq </h1>
+                <p>Engineering Student with a passion for Computer Science</p>
+            </div>
+        </div>
 
     </header>
     <main>
-
-        <div class="rs">
-            <h1>My social-media</h1>
-            <a href="https://www.linkedin.com/in/axel-marsacq-193b06295/"><img src="images/linkLogo.webp" alt="logo"></a>
-            <a href="https://github.com/Marsattak38"><img src="images/githubLogo.webp" alt="logo"></a>
-        </div>
-
-        <h1>My mail</h1>
-        <p>axel.mrsq@gmail.com</p>
-        <img src="images/mailLogo.webp" alt="images">
+        <div style="background-color: #403d39; display: flex; color:#ccc5b9;">
+            <div class="rs">
+                <h1>My social-media</h1>
+                <a href="https://www.linkedin.com/in/axel-marsacq-193b06295/"><img src="images/linkLogo.webp" alt="logo"></a>
+                <a href="https://github.com/Marsattak38"><img src="images/githubLogo.webp" alt="logo"></a>
+            </div>
+            <div>
+                <h1>My mail</h1>
+                <p>axel.mrsq@gmail.com</p>
+                <img src="images/mailLogo.webp" alt="images">
+            </div>
+        </div> 
          
         <div class="formation">
 
