--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
 </head>
 <body>
     <header>
-        <img style="width: 100;height: 150px;border-radius: 1rem;" src="images/profilPhoto.jpeg" alt="image">
-        <div>
-            <h1>Axel Marsacq</h1>
-            <h2>Engineering Student with a Passion for Computer Science</h2>
+        <div style="display: flex; align-items: center;">
+            <img style="width: 100;height: 150px;border-radius: 1rem;" src="images/profilPhoto.jpeg" alt="image">
+            <div style="padding: 1rem;">
+                <h1>Axel Marsacq</h1>
+                <h2>French Engineering Student </h2>
+                <h2>with a Passion for Computer Science</h2>
+            </div>
+        </div>
+        <div style="display: flex; align-items: center;">
+            <a href=""><img style="width: 130;height: 80px;" src="images/linkIcon.svg" alt="image"></a>
+            <a href=""><img style="width: 50;height: 50px;" src="images/githubIcon.svg" alt="image"></a>
         </div>
     </header>
 
