--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
             <a href=""><img style="width: 50;height: 50px;" src="images/githubIcon.svg" alt="image"></a>
         </div>
     </header>
-
     <main>
+        <section class="Part1" style="display: flex; justify-content: space-around; align-items: center;">
+            <div style="display: flex; align-items: center;">
+                <p>Actually Studying Generalistic Engineering at ECAM LaSalle</p>
+                <a href="https://www.ecam.fr/"><img style="width: 200px; height: 188px;" src="images/ecamLogo.webp" alt="image"></a>
+            </div>
+            <a href=""><img style="width: 128px; height: 128px;" src="images/cvIcon.webp" alt="image"></a>
+        </section>
 
     </main>
 
     <footer>
 
-        <script href="script.js"></script>
+        <script src="script.js"></script>
 
     </footer>
 </body>
