--- a/index.html
+++ b/index.html
@@ -30,6 +30,34 @@
             </div>
             <a href=""><img style="width: 128px; height: 128px;" src="images/cvIcon.webp" alt="image"></a>
         </section>
+        <section class="Part2">
+            <h1>Self-Learn</h1>
+
+            <a href=""><p>Harvard CS50’s Artificial Intelligence with Python – Full University Course</p></a>
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><p>Java - cours</p></a>
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><p>Learn Blockchain, Solidity, and Full Stack Web3 Development with JavaScript</p></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><p>React Course - Beginner's Tutorial for React JavaScript Library</p></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+
+            <a href=""><p>JavaScript Programming - Full Course</p></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="" alt=""></a>
+
+        </section>
 
     </main>
 
