--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+
     <title>Axel MARSACQ</title>
+
     <link rel="shortcut icon" href="media/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
+
     <div class="terminal">
         <div class="terminal-header">
             <div class="buttons">
@@ -17,6 +24,7 @@
             </div>
             <div class="title">Terminal - bash</div>
         </div>
+        
         <div class="terminal-body">
             <div class="output"></div>
             <div class="input-line">
