--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             </div>
         </div>
     </div>
-
+    <div class="overlay"></div>
     <section id="about">
+        <button class="close-button" onclick="hidePopup()">Fermer</button>
         <h2>About Me</h2>
         <p>I’m Axel, a 21y passionate about engineering and technology. Currently, I am pursuing a degree in <strong>Generalistic Engineering</strong> in France.</p>
         <p>Alongside my formal education, I am a dedicated <strong>self-learner in software engineering</strong>.</p>
@@ -56,6 +57,7 @@
     </section>
 
     <section id="projects">
+        <button class="close-button" onclick="hidePopup()">Fermer</button>
         <h2>Projects</h2>
         <p><strong>PixICAM - Decentralised Pixel Place</strong></p>
         <img style="width: 50%;" src="media/pixIcam.jpeg" alt="jpeg">
@@ -68,6 +70,7 @@
     </section>
 
     <section id="contact">
+        <button class="close-button" onclick="hidePopup()">Fermer</button>
         <h2>Contact</h2>
         <a style="text-decoration: none;" href="mailto:axel.mrsq@gmail.com">Mail : <u>axel.mrsq@gmail.com↗</u></a>
         <br>
